syntax="proto3";
package com.ydqp.common.receiveProtoMsg;
option java_outer_classname = "lobby";
message PlayerRankData {
    int64 playerId = 1;
    string playerName = 2;
    string nickName = 3;
    string headUrl = 4;
    int32 grade = 5;                        //等级
    double point = 6;                       //筹码或金币
    int64 rankNo = 7;
    string fbUserId = 8;
}

message RankUpdate {
    PlayerRankData playerRankData = 1;      //玩家信息
    int32 rankType = 2;                     //排行榜类型(1:筹码;2:金币)
}

message Rank {
    int64 playerId = 1;
}

message GradeUpdate {
    int64 playerId = 1;
    int32 roomType = 2;                     //房间类型(1:筹码;2:金币;3:快速赛)
    double basicPoint = 3;                   //房间底分
    int32 point = 4;                        //玩家输赢积分
    int32 gameType = 5;                     //玩法类型(1:rummy;2:teempatti)
}

message RankSuccess {
    repeated PlayerRankData coinRankDataList = 1;   //筹码排行版信息
    PlayerRankData playerCoinRankInfo = 2;          //玩家筹码排行榜信息
    repeated PlayerRankData zjRankDataList = 3;   //金币排行版信息
    PlayerRankData playerZjRankInfo = 4;          //玩家金币排行榜信息
}

message GradeUpdateSuccess {
    int64 playerId = 1;
    int32 originGrade = 2;                  //升级前等级
    int32 grade = 3;                        //升级后等级
    double experience = 4;                  //经验
    double coinPoint = 5;
}

message UpgradeSuccess {
    int64 playerId = 1;
    int32 grade = 2;
}